adding javascript logic

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="form-wrapper">
-      <input type="text" placeholder="title" />
-      <input type="text" placeholder="description" />
-      <button>POST</button>
-    </div>
+    <form class="form-wrapper">
+      <input type="text" name="title" placeholder="title" />
+      <input type="text" name="description" placeholder="description" />
+      <button type="submit">POST</button>
+    </form>
 
     <div class="loader"></div>
     <div class="posts">
@@ -21,8 +21,8 @@
           reprehenderit
         </h3>
         <p>
-          quia et suscipit\nsuscipit recusandae consequuntur expedita et
-          cum\nreprehenderit molestiae ut ut quas totam\nnostrum rerum est autem
+          quia et suscipit \n suscipit recusandae consequuntur expedita et cum
+          \n reprehenderit molestiae ut ut quas totam \n nostrum rerum est autem
           sunt rem eveniet architecto
         </p>
       </div>
@@ -38,5 +38,6 @@
         </p>
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
